Correct spacing on header

--- a/style.css
+++ b/style.css
@@ -13,11 +13,11 @@ body {
 
 .header {
     font-size: 18px;
-    padding: 0 64px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
+
 .header-logo {
     color: #F9FAF8;
     font-size: 24px;
